Changelog
=========

3.4 (unreleased)
----------------

- Change mail tabbed view to register tabs with old-style FTI actions
  instead of custom TabbedView class.
  [lgraf]

- Add plone.app.lockingbehavior to ftw.mail.mail FTI.
  [lgraf]

- Hide duplicate mail title in mail preview tab.
  [lgraf]

- Customized document default view in order to render `file`
  field in NO_DOWNLOAD_DISPLAY_MODE.
  [lgraf]

- Omit `public_trial` and `public_trial_statement` fields from dossier and
  repository folder default views.
  [lgraf]

- Removed previously customized default view for business case dossiers. The
  default view is now customized for all folderish types.
  [lgraf]

- Customize plone.dexterity default view for all dexterity content in
  order to be able to omit specific fields.
  [lgraf]

- Remove `public_trial` from repository byline.
  [lgraf]

- Journalize any changes to `public_trial` field.
  [lgraf]

- Journal: Listen on IBaseDocument instead of IDocumentSchema - mails are now also
  considered documentish and should be treated equally.
  [lgraf]

- Don't show public trial edit form for template dossiers.
  [lgraf]

- Reword German translations for public_trial_statement label and description:
  New label: Bearbeitungsinformation
  New description: Datum Gesuch, Datum Entscheid, Verweis auf GEVER-Zugangsgeschaeft
  [lgraf]

- Fix issue with `prevent_deletion` subscriber not being able to acquire membership_tool
  because of broken acquisition during Plone site deletion.
  [lgraf]

- Make default value adapter for `public_trial` use the configurable default
  value from IClassificationSettings registry record.

- Add an IClassificationSettings registry record.
  [lgraf]

- Allow public trial state to also be modified in closed dossier states.
  [mathias.leimgruber]

- File a copy of the mail in the dossier by default when sending documents from GEVER.
  [lgraf]

- Add overview tab for mail (Shows metadata).
  [mathias.leimgruber]
